--- a/HTML5_ShowCase/main.css
+++ b/HTML5_ShowCase/main.css
@@ -1,13 +1,14 @@
-#leftbox{
-	float:left;
-	padding:20px;
-	border:3px solid red;
+*{
+	margin: 0px;
+	padding: 0px;
 }
-#rightbox{
-	float:left;
-	width: 250px;
+p{
+	padding-bottom: 10px;
+}
+#note{
+	font: 15px Tahoma;
+}
+li{
 	margin-left: 20px;
-	padding:20px;
-	border: 3px solid blue;
-	
+	font: 15px Tahoma;
 }
